<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Titles -->
    <string name="app_name">My Movie Catalog</string>
    <string name="title_activity_add_to_db" translatable="false">AddToDBActivity</string>
    <string name="title_activity_details_results" translatable="false">DetailsResultsActivity</string>
    <string name="title_activity_movie_catalog" translatable="false">MovieCatalog</string>
    <string name="title_activity_search_results" translatable="false">SearchResultsActivity</string>
    <string name="title_activity_test_search" translatable="false">TestSearch</string>
    <string name="title_section1">Display all</string>
    <string name="title_section2">All movies</string>
    <string name="title_section3">All series</string>

    <!-- Activities -->
    <string name="action_delete_movie">Delete this movie from catalog</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="confirmation">Are you sure ?</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="hello_world_big" translatable="false">Hello world! Hello world! Hello world! Hello world! Hello world!</string>
    <string name="test" translatable="false">test</string>

    <!-- MovieCatalog -->
    <string name="action_add_a_movie">Add a video</string>
    <string name="language">en</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_hint">Search movies</string>
    <string name="title_cat_all">My videos</string>
    <string name="title_cat_movies">My movies</string>
    <string name="title_cat_series">My series</string>

    <!-- SearchResultsActivity -->
    <string name="httpErrorIO">Couldn\'t communicate with the server. Try again later.</string>
    <string name="no_result">No result</string>
    <string name="search">Search</string>
    <string name="too_much_results">Too many results, please refine your search</string>

    <!-- DetailsResultsActivity -->
    <string name="description_thumb_poster" translatable="false">Thumb of the video\'s poster</string>
    <string name="label_actors">Actors :</string>
    <string name="label_genres">Genres :</string>
    <string name="label_overview">Synopsis</string>
    <string name="label_title">Title :</string>
    <string name="rating">Rating</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_year">Unknown year</string>
    <string name="action_add_movie">Add the video</string>
    <string name="unavailable">Unavailable</string>
    <string name="label_year">Year</string>
    <string name="label_rating">Ratings</string>
    <string name="add_hint">Video title to add</string>
    <string name="votes">votes</string>
    <string name="vote">vote</string>
    <string name="unknown_title">Unknown title</string>
    <string name="unknown_genre">Unknown genre</string>
    <string name="unknown_actors">Unknown actors</string>
    <string name="unknown_date">Unknown release date</string>
    <string name="label_public">Public</string>
    <string name="label_private">Personal</string>
    <string name="no_video">No video found</string>
    <string name="label_quality">Quality</string>
    <string name="quality_normal">DVDRip</string>
    <string name="quality_low">Low</string>
    <string name="quality_720">720p</string>
    <string name="quality_1080">1080p</string>
    <string name="quality_4k">4k</string>
    <string name="label_format">Format</string>
    <string name="format_numeric" translatable="false">Digital</string>
    <string name="format_dvd" translatable="false">DVD</string>
    <string name="format_bluray" translatable="false">Blu-Ray</string>
    <string name="movie">movie</string>
    <string name="series">series</string>
    <string name="sort">Sort videos</string>
    <string name="sort_by_newest">Sort by newest</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_error">An error occurred during sorting</string>
    <string name="label_location">Location</string>
    <string name="label_seasons">Seasons</string>
    <string name="label_season_one">Season 1</string>
    <string name="season">Season</string>
    <string name="title_activity_seasons" translatable="false">SeasonsActivity</string>
    <string name="label_comment">Comment</string>
    <string name="comment_hint">Add your comments here</string>
    <string name="add_comment">Write comment</string>
    <string name="no_comment">No comment</string>

</resources>
