<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vwuilbea.mymoviecatalog.operations.details.DetailsResultsActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_add_movie"
        android:title="@string/action_add_movie"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete_movie"
        android:title="@string/action_delete_movie"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
</menu>
