<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailsResultsActivity"
    style="@style/RootLayout">

    <RelativeLayout
        android:id="@+id/progress_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </RelativeLayout>

<com.nirhart.parallaxscroll.views.ParallaxScrollView
    android:id="@+id/parallax_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:parallax_factor="3.4"
    tools:context=".DetailsResultsActivity"
    android:visibility="invisible">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cover_height_details"
            android:src="@android:drawable/ic_menu_report_image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="@dimen/thumb_width_details"
                android:layout_height="@dimen/thumb_height_details"
                android:layout_margin="@dimen/minimum_margin"
                android:src="@android:drawable/ic_menu_report_image" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_poster"
                android:layout_marginLeft="@dimen/minimum_margin"
                android:layout_marginStart="@dimen/minimum_margin"
                android:text="@string/unknown_date"
                android:textSize="@dimen/subtitle_size_details"
                android:textColor="@android:color/darker_gray"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image_poster"
                android:layout_toEndOf="@+id/image_poster"
                android:text="@string/unknown_title"
                android:textSize="@dimen/title_size_details"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/text_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_title"
                android:layout_toRightOf="@+id/image_poster"
                android:layout_toEndOf="@+id/image_poster"
                android:textSize="@dimen/subtitle_size_details"
                android:textColor="@android:color/darker_gray"
                android:text="@string/unknown_genre"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/text_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_runtime"
                android:layout_toRightOf="@+id/image_poster"
                android:layout_toEndOf="@+id/image_poster"
                android:textSize="@dimen/subtitle_size_details"
                android:text="@string/unknown_genre"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/label_actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_genre"
                android:layout_toRightOf="@+id/image_poster"
                android:layout_toEndOf="@+id/image_poster"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/label_actors"
                android:textSize="@dimen/subtitle_size_details"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/text_actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_actors"
                android:layout_toRightOf="@+id/image_poster"
                android:layout_toEndOf="@+id/image_poster"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/unknown_actors"
                android:textSize="@dimen/subtitle_size_details"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/label_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_date"
                android:layout_marginLeft="@dimen/minimum_margin"
                android:layout_marginStart="@dimen/minimum_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@string/label_overview"
                android:textSize="@dimen/section_title_size_details"
                tools:ignore="HardcodedText" />

            <com.vwuilbea.mymoviecatalog.textjustify.TextViewEx
                android:id="@+id/text_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_overview"
                android:layout_marginLeft="@dimen/minimum_margin"
                android:layout_marginStart="@dimen/minimum_margin"
                android:layout_marginEnd="@dimen/minimum_margin"
                android:layout_marginRight="@dimen/minimum_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:text="@string/unavailable"
                android:layout_gravity="center_vertical|end"
                android:gravity="start"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

    </LinearLayout>

</com.nirhart.parallaxscroll.views.ParallaxScrollView>
</RelativeLayout>